--- a/app/assets/stylesheets/questions.scss
+++ b/app/assets/stylesheets/questions.scss
@@ -1,3 +1,52 @@
 // Place all the styles related to the questions controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+form {
+  display: flex;
+  width: 40vw;
+  border-radius: 4px;
+  #question {
+    width: 90%;
+    border: 1px rgba(0, 0, 0, 0.3);
+    border-style: solid;
+    padding: 10px;
+  }
+  #submit {
+    width: 10%;
+    border: none;
+    background-color: #3779B7;
+    color: white;
+    font-weight: bolder;
+    padding: 12px 4px;
+  }
+}
+#answer-style {
+  #question {
+  border-left: 5px solid #DDDDDD;
+  padding: 3px;
+  padding-left: 10px;
+  margin-bottom: 15px;
+  &:hover {
+    background-color: #FEFFE0;
+  }
+  }
+  #answer {
+  border-left: 5px solid #DDDDDD;
+  padding: 3px;
+  padding-left: 10px;
+  margin-bottom: 15px;
+  &:hover {
+    background-color: #FEFFE0;
+  }
+  }
+}
+a {
+  text-decoration: none;
+  font-size: 15px;
+  font-family: arial;
+  color: #4697D0;
+  &:hover {
+   color: #3779B7;
+  }
+}
+
