--- a/app/views/questions/ask.html.erb
+++ b/app/views/questions/ask.html.erb
@@ -1,4 +1,5 @@
+<p>Ask your coach anything:</p>
 <form action="http://localhost:3000/answer">
-  <input type="text" name="question">
-  <input type="submit" value="Ask!">
+  <input id="question" type="text" name="question">
+  <input id="submit" type="submit" value="Ask!">
 </form>
